## Makefile.am -- Process this file with automake to produce Makefile.in

lib_LIBRARIES = libc18f.a

libc18f_a_SOURCES =
libc18f_a_SOURCES += ctype/iscntrl.c
libc18f_a_SOURCES += ctype/isdigit.c
libc18f_a_SOURCES += ctype/isgraph.c
libc18f_a_SOURCES += ctype/islower.c
libc18f_a_SOURCES += ctype/isprint.c
libc18f_a_SOURCES += ctype/ispunct.c
libc18f_a_SOURCES += ctype/isspace.c
libc18f_a_SOURCES += ctype/isupper.c
libc18f_a_SOURCES += ctype/isxdigit.c
libc18f_a_SOURCES += delay/delay100ktcy.S
libc18f_a_SOURCES += delay/delay100tcy.S
libc18f_a_SOURCES += delay/delay10ktcy.S
libc18f_a_SOURCES += delay/delay10tcy.S
libc18f_a_SOURCES += delay/delay1ktcy.S
libc18f_a_SOURCES += delay/delay1mtcy.S
libc18f_a_SOURCES += stdio/fprintf.c
libc18f_a_SOURCES += stdio/printf.c
libc18f_a_SOURCES += stdio/printf_small.c
libc18f_a_SOURCES += stdio/printf_tiny.c
libc18f_a_SOURCES += stdio/putchar.c
libc18f_a_SOURCES += stdio/sprintf.c
libc18f_a_SOURCES += stdio/streams.c
libc18f_a_SOURCES += stdio/strmgpsim.c
libc18f_a_SOURCES += stdio/strmmssp.c
libc18f_a_SOURCES += stdio/strmputchar.c
libc18f_a_SOURCES += stdio/strmusart.c
libc18f_a_SOURCES += stdio/vfprintf.c
libc18f_a_SOURCES += stdio/vprintf.c
libc18f_a_SOURCES += stdio/vsprintf.c
libc18f_a_SOURCES += stdlib/atof.c
libc18f_a_SOURCES += stdlib/atoi.c
libc18f_a_SOURCES += stdlib/atol.c
libc18f_a_SOURCES += stdlib/calloc.c
libc18f_a_SOURCES += stdlib/crc16.c
libc18f_a_SOURCES += stdlib/free.c
libc18f_a_SOURCES += stdlib/g_ftoa.S
libc18f_a_SOURCES += stdlib/itoa.c
libc18f_a_SOURCES += stdlib/ltoa.c
libc18f_a_SOURCES += stdlib/malloc.c
libc18f_a_SOURCES += stdlib/memfree.c
libc18f_a_SOURCES += stdlib/memfreemax.c
libc18f_a_SOURCES += stdlib/memmisc.c
libc18f_a_SOURCES += stdlib/rand.c
libc18f_a_SOURCES += stdlib/realloc.c
libc18f_a_SOURCES += stdlib/x_ftoa.c
libc18f_a_SOURCES += string/memccpy.c
libc18f_a_SOURCES += string/memchr.c
libc18f_a_SOURCES += string/memchrpgm.c
libc18f_a_SOURCES += string/memchrram.c
libc18f_a_SOURCES += string/memcmp.c
libc18f_a_SOURCES += string/memcpy.c
libc18f_a_SOURCES += string/memcpypgm2ram.c
libc18f_a_SOURCES += string/memcpyram2ram.c
libc18f_a_SOURCES += string/memmove.c
libc18f_a_SOURCES += string/memrchr.c
libc18f_a_SOURCES += string/memset.c
libc18f_a_SOURCES += string/strcat.c
libc18f_a_SOURCES += string/strchr.c
libc18f_a_SOURCES += string/strcmp.c
libc18f_a_SOURCES += string/strcpy.c
libc18f_a_SOURCES += string/strcspn.c
libc18f_a_SOURCES += string/strlen.c
libc18f_a_SOURCES += string/strlwr.c
libc18f_a_SOURCES += string/strncat.c
libc18f_a_SOURCES += string/strncmp.c
libc18f_a_SOURCES += string/strncpy.c
libc18f_a_SOURCES += string/strpbrk.c
libc18f_a_SOURCES += string/strrchr.c
libc18f_a_SOURCES += string/strspn.c
libc18f_a_SOURCES += string/strstr.c
libc18f_a_SOURCES += string/strtok.c
libc18f_a_SOURCES += string/strupr.c
libc18f_a_SOURCES += utils/cnvfrac.S
libc18f_a_SOURCES += utils/cnvint.S
libc18f_a_SOURCES += utils/cvtdec.S

include $(top_srcdir)/Makefile.common

