## Makefile.am -- Process this file with automake to produce Makefile.in

lib_LIBRARIES = libsdcc.a

libsdcc_a_SOURCES = 
libsdcc_a_SOURCES += char/divschar.c
libsdcc_a_SOURCES += char/divuchar.c
libsdcc_a_SOURCES += char/modschar.c
libsdcc_a_SOURCES += char/moduchar.c
libsdcc_a_SOURCES += fixed16x16/fps16x162schar.S
libsdcc_a_SOURCES += fixed16x16/fps16x162sfloat.c
libsdcc_a_SOURCES += fixed16x16/fps16x162sint.S
libsdcc_a_SOURCES += fixed16x16/fps16x162slong.S
libsdcc_a_SOURCES += fixed16x16/fps16x162uchar.S
libsdcc_a_SOURCES += fixed16x16/fps16x162uint.S
libsdcc_a_SOURCES += fixed16x16/fps16x162ulong.S
libsdcc_a_SOURCES += fixed16x16/fps16x16_add.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_div.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_eq.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_gt.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_gteq.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_lt.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_lteq.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_mul.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_neq.c
libsdcc_a_SOURCES += fixed16x16/fps16x16_sub.c
libsdcc_a_SOURCES += fixed16x16/schar2fps16x16.S
libsdcc_a_SOURCES += fixed16x16/sint2fps16x16.S
libsdcc_a_SOURCES += fixed16x16/slong2fps16x16.S
libsdcc_a_SOURCES += fixed16x16/uchar2fps16x16.S
libsdcc_a_SOURCES += fixed16x16/uint2fps16x16.S
libsdcc_a_SOURCES += fixed16x16/ulong2fps16x16.S
libsdcc_a_SOURCES += float/fs2schar.c
libsdcc_a_SOURCES += float/fs2sint.c
libsdcc_a_SOURCES += float/fs2slong.c
libsdcc_a_SOURCES += float/fs2uchar.c
libsdcc_a_SOURCES += float/fs2uint.c
libsdcc_a_SOURCES += float/fs2ulong.c
libsdcc_a_SOURCES += float/fsadd.c
libsdcc_a_SOURCES += float/fsdiv.c
libsdcc_a_SOURCES += float/fseq.c
libsdcc_a_SOURCES += float/fsgt.c
libsdcc_a_SOURCES += float/fslt.c
libsdcc_a_SOURCES += float/fsmul.c
libsdcc_a_SOURCES += float/fsneq.c
libsdcc_a_SOURCES += float/fssub.c
libsdcc_a_SOURCES += float/schar2fs.c
libsdcc_a_SOURCES += float/sint2fs.c
libsdcc_a_SOURCES += float/slong2fs.c
libsdcc_a_SOURCES += float/uchar2fs.c
libsdcc_a_SOURCES += float/uint2fs.c
libsdcc_a_SOURCES += float/ulong2fs.c
libsdcc_a_SOURCES += gptr/gptrget1.c
libsdcc_a_SOURCES += gptr/gptrget2.c
libsdcc_a_SOURCES += gptr/gptrget3.c
libsdcc_a_SOURCES += gptr/gptrget4.c
libsdcc_a_SOURCES += gptr/gptrput1.c
libsdcc_a_SOURCES += gptr/gptrput2.c
libsdcc_a_SOURCES += gptr/gptrput3.c
libsdcc_a_SOURCES += gptr/gptrput4.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrget1.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrget2.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrget3.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrget4.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrput1.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrput2.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrput3.c
libsdcc_a_SOURCES += gptr/eeprom8_gptrput4.c
libsdcc_a_SOURCES += gptr/eeprom8_write.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrget1.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrget2.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrget3.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrget4.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrput1.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrput2.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrput3.c
libsdcc_a_SOURCES += gptr/eeprom16_gptrput4.c
libsdcc_a_SOURCES += gptr/eeprom16_write.c
libsdcc_a_SOURCES += int/divsint.c
libsdcc_a_SOURCES += int/divuint.c
libsdcc_a_SOURCES += int/modsint.c
libsdcc_a_SOURCES += int/moduint.c
libsdcc_a_SOURCES += int/mulint.c
libsdcc_a_SOURCES += long/divslong.c
libsdcc_a_SOURCES += long/divulong.c
libsdcc_a_SOURCES += long/modslong.c
libsdcc_a_SOURCES += long/modulong.c
libsdcc_a_SOURCES += long/mullong.c
libsdcc_a_SOURCES += lregs/lrrest.c
libsdcc_a_SOURCES += lregs/lrst.c
libsdcc_a_SOURCES += stack/stack.S

include $(top_srcdir)/Makefile.common

